# modbustcp-rtu

./: .gitlab-ci.yml  CMakeLists.txt  README  README.md  cmd_server.c  cmd_server.h  connection.c  connection.h  connections_pool.c  connections_pool.h  global.c  global.h  high_client.c  high_client.h  input_queue.c  input_queue.h  low_client.c  low_client.h  main.c  message.c  message.h  sockets.c  sockets.h  std_input.c  std_input.h  tcp_server.c  tcp_server.h  trace.c  trace.h  tty.c  tty.h  udp_server.c  udp_server.h
.github/workflows/: codeql.yml
targets/: freescale-orion-28.cmake  odroid-c2.cmake  x86_64-w64-mingw32.cmake  xscale-uc8410.cmake  xscale-uc8410a.cmake
